--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body
 {
   padding: 10%;
-  padding-top: 40px;
+  padding-top: 10%;
     background-image: url('background.jpeg');
     background-size: contain;
 }
