--- a/index.css
+++ b/index.css
@@ -55,3 +55,102 @@ h1 a
   text-decoration: none;
   color: green;
 }
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  }
+body{
+  font-size: 20px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: lightgrey;
+  text-align: center;
+}
+.one{
+  font-size: 100%;
+  color: #111;
+}
+.row
+{
+  background-color: lightgrey;
+ margin: 6%;
+ width: 1180px;
+ position: absolute;
+}
+.main-nav {
+  float: left;
+  margin-top: 10px;
+}
+.main-nav li{
+  display:inline-block;
+  list-style: none;
+  margin-left: 40px;
+}
+.main-nav li a{
+ color:#444;
+  float: left;
+  text-decoration:underline;
+  text-transform: uppercase;
+  font-size: 90%;
+  font-weight: 100;
+}
+h1{
+  color: #333;
+  font-size: 270%;
+}
+.colorchange{
+  animation: colorchange 1s infinite;
+}
+@keyframes colorchange {
+  0%{color:red;}
+  25%{color:white;}
+  50%{color:green;}
+  100%{color:orange;}
+}
+.mobile-icon{
+  color:lightgrey;
+}
+@media only screen and (max-width:1180px){
+  .main-content-header{
+    width:100%;
+    padding: 0 2%;
+  }
+  h1{font-size: 200%;}
+  h2{font-size: 180%;}
+
+}
+@media only screen and (max-width:768px){
+  h1{font-size: 180%;}
+  h2{font-size: 160%;}
+  .mobile-icon{
+    display: inline-block;
+    color:blue;
+    float: right;
+    margin-top: 30px;
+    margin-right: 20px;
+  }
+  .main-nav{float: left;}
+  .main-nav li {
+    display: block;
+    margin-top: 10px;
+  }
+}
+@media only screen and (max-width:550px){
+
+  h1{font-size: 150%;}
+  h2{font-size: 110%;}
+  .mobile-icon{
+    display: inline-block;
+    color:blue;
+    float: right;
+    margin-top: 30px;
+    margin-right: 20px;
+  }
+  .main-nav{float: left;}
+  .main-nav li {
+    display: block;
+    margin-top: 10px;
+  }
+}
+
