--- a/index.css
+++ b/index.css
@@ -1,4 +1,3 @@
-
 *{
   padding: 0;
   margin: 0;
@@ -6,18 +5,18 @@
   }
 body{
   font-size: 20px;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-color: lightgrey;
+  background-size: 20px ;
   text-align: center;
 }
 .one{
+  margin-top: 5%;
+  padding-bottom: 10%;
+  background-color: lightgrey;
   font-size: 100%;
   color: #111;
 }
 .row
 {
-  background-color: lightgrey;
  margin: 6%;
  width: 1180px;
  position: absolute;
@@ -32,11 +31,11 @@ body{
   margin-left: 40px;
 }
 .main-nav li a{
- color:#444;
+color:#000080;
   float: left;
   text-decoration:underline;
   text-transform: uppercase;
-  font-size: 90%;
+  font-size: 120%;
   font-weight: 100;
 }
 h1{
@@ -60,8 +59,16 @@ h1{
     width:100%;
     padding: 0 2%;
   }
+  .main-nav li a{
+    padding-left: 20%;
+}
   h1{font-size: 200%;}
   h2{font-size: 180%;}
+  .one{
+    margin-top: 5%;
+    padding-bottom: 20%;
+  }
+
 
 }
 @media only screen and (max-width:768px){
@@ -79,8 +86,17 @@ h1{
     display: block;
     margin-top: 10px;
   }
+  .one{
+    margin-top: 5%;
+    padding-bottom: 40%;
+  }
+
 }
 @media only screen and (max-width:550px){
+  .one{
+    margin-top: 5%;
+    padding-bottom: 40%;
+  }
 
   h1{font-size: 150%;}
   h2{font-size: 110%;}
@@ -97,4 +113,3 @@ h1{
     margin-top: 10px;
   }
 }
-
