--- a/index.css
+++ b/index.css
@@ -113,3 +113,9 @@ h1{
     margin-top: 10px;
   }
 }
+@media only screen and (max-width:350px){
+  .one{
+    margin-top: 5%;
+    padding-bottom: 50%;
+  }
+}
