--- a/index.css
+++ b/index.css
@@ -95,7 +95,7 @@ h1{
 @media only screen and (max-width:550px){
   .one{
     margin-top: 5%;
-    padding-bottom: 40%;
+    padding-bottom: 50%;
   }
 
   h1{font-size: 150%;}
@@ -117,5 +117,19 @@ h1{
   .one{
     margin-top: 5%;
     padding-bottom: 50%;
+  }
+   h1{font-size: 130%;}
+  h2{font-size: 90%;}
+  .mobile-icon{
+    display: inline-block;
+    color:blue;
+    float: right;
+    margin-top: 30px;
+    margin-right: 20px;
+  }
+  .main-nav{float: left;}
+  .main-nav li {
+    display: block;
+    margin-top: 10px;
   }
 }
