--- a/index.css
+++ b/index.css
@@ -47,9 +47,12 @@ h1{
 }
 @keyframes colorchange {
   0%{color:red;}
+    50%{color:green;}
   25%{color:white;}
   50%{color:green;}
   100%{color:orange;}
+    50%{color:green;}
+
 }
 .mobile-icon{
   color:lightgrey;
